Fix mobile list bullet clipping with list-style-position inside

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,6 +225,7 @@ a:visited {
 .post-content ol {
   padding-left: 1.5em;
   margin-bottom: 1.25em;
+  list-style-position: inside;
 }
 
 .post-content li {
